fixed overflow styling

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -37,7 +37,6 @@
 }
 
 .currentGame {
-  overflow: hidden;
   height: 100vh;
   margin-top: 20px;
 }
